--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://cosminmihai87.github.io/mini-chef-app",
   "name": "mini-chef-app",
   "version": "0.1.0",
   "private": true,
@@ -54,16 +55,15 @@
     "style-loader": "^3.3.1",
     "stylelint": "^14.8.1",
     "stylelint-config-standard-scss": "^3.0.0",
-    "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0",
-    "web-vitals": "^2.1.4",
     "webpack": "^5.64.4",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.2.3",
     "stylelint-webpack-plugin": "^3.2.0",
     "webpack-cli": "^4.9.2"
   },
@@ -80,7 +80,9 @@
     "stylelint-fix": "stylelint --fix \"src/**/*..{css,scss}\"",
     "test": "jest --verbose --updateSnapshot --coverage=false",
     "test-coverage": "jest --coverage",
-    "test-single-file": "npx jest -u -- \"App.test.tsx\""
+    "test-single-file": "npx jest -u -- \"App.test.tsx\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
