--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-resolve": "^27.4.2",
     "jest-watch-typeahead": "^1.0.0",
     "mini-css-extract-plugin": "^2.4.5",
+    "node-sass": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.4",
     "postcss-flexbugs-fixes": "^5.0.2",
