--- a/package.json
+++ b/package.json
@@ -1,34 +1,57 @@
 {
-  "homepage": "https://cosminmihai87.github.io/mini-chef-app",
   "name": "mini-chef-app",
   "version": "0.1.0",
   "private": true,
+  "description": "React web-app to manage cooking recipes",
+  "homepage": "https://cosminmihai87.github.io/mini-chef-app",
+  "main": "./build/main.js",
+  "scripts": {
+    "start": "cross-env NODE_ENV=development npm-run-all lint-check webpack-development",
+    "build": "cross-env NODE_ENV=production npm-run-all lint-check webpack-production",
+    "webpack-development": "webpack-dev-server",
+    "webpack-production": "webpack --config webpack.config.js",
+    "lint-check": "npm-run-all eslint-check stylelint-check",
+    "lint-fix": "npm-run-all eslint-fix stylelint-fix",
+    "eslint-check": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
+    "eslint-fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
+    "stylelint-check": "stylelint \"src/**/*.{css,scss}\"",
+    "stylelint-fix": "stylelint --fix \"src/**/*..{css,scss}\"",
+    "test": "jest --verbose --updateSnapshot --coverage=false",
+    "test-coverage": "jest --coverage",
+    "test-single-file": "npx jest -u -- \"App.test.tsx\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
+  },
   "dependencies": {
-    "@babel/core": "^7.16.0",
+    "gh-pages": "^3.2.3",
+    "react": "^18.1.0",
+    "react-dev-utils": "^12.0.1",
+    "react-dom": "^18.1.0",
+    "react-refresh": "^0.11.0",
+    "resolve": "^1.20.0"
+  },
+  "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@svgr/webpack": "^5.5.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.1.1",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.1.1",
+    "@types/jest": "^27.4.1",
     "@types/node-sass": "^4.11.2",
-    "babel-jest": "^27.4.2",
-    "babel-loader": "^8.2.3",
-    "babel-plugin-named-asset-import": "^0.3.8",
+    "@types/react": "^18.0.8",
+    "@types/react-dom": "^18.0.3",
+    "@types/react-redux": "^7.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.21.0",
+    "@typescript-eslint/parser": "^5.21.0",
+    "babel-loader": "^8.2.5",
     "babel-preset-react-app": "^10.0.1",
-    "bfj": "^7.0.2",
-    "browserslist": "^4.18.1",
-    "camelcase": "^6.2.1",
-    "case-sensitive-paths-webpack-plugin": "^2.4.0",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "css-minimizer-webpack-plugin": "^3.2.0",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
     "eslint": "^8.3.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
-    "fs-extra": "^10.0.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.4.3",
@@ -42,117 +65,23 @@
     "postcss-loader": "^6.2.1",
     "postcss-normalize": "^10.0.1",
     "postcss-preset-env": "^7.0.1",
-    "prompts": "^2.4.2",
-    "react": "^18.1.0",
     "react-app-polyfill": "^3.0.0",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "^18.1.0",
-    "react-refresh": "^0.11.0",
-    "resolve": "^1.20.0",
     "resolve-url-loader": "^4.0.0",
     "sass-loader": "^12.3.0",
-    "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
     "stylelint": "^14.8.1",
     "stylelint-config-standard-scss": "^3.0.0",
+    "stylelint-webpack-plugin": "^3.2.0",
     "terser-webpack-plugin": "^5.2.5",
+    "ts-jest": "^27.1.4",
+    "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0",
     "webpack": "^5.64.4",
+    "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.6.0",
     "webpack-manifest-plugin": "^4.0.2"
-  },
-  "devDependencies": {
-    "gh-pages": "^3.2.3",
-    "stylelint-webpack-plugin": "^3.2.0",
-    "webpack-cli": "^4.9.2"
-  },
-  "scripts": {
-    "start": "cross-env NODE_ENV=development BABEL_ENV=development npm-run-all webpack-development",
-    "build": "cross-env NODE_ENV=production BABEL_ENV=production npm-run-all lint-check webpack-production",
-    "webpack-development": "webpack-dev-server --config ./config/webpack.config.js --mode development",
-    "webpack-production": "node --max_old_space_size=8192 ./node_modules/webpack/bin/webpack.js --config ./config/webpack.config.js --mode production",
-    "lint-check": "npm-run-all eslint-check stylelint-check",
-    "lint-fix": "npm-run-all eslint-fix stylelint-fix",
-    "eslint-check": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "eslint-fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
-    "stylelint-check": "stylelint \"src/**/*.{css,scss}\"",
-    "stylelint-fix": "stylelint --fix \"src/**/*..{css,scss}\"",
-    "test": "jest --verbose --updateSnapshot --coverage=false",
-    "test-coverage": "jest --coverage",
-    "test-single-file": "npx jest -u -- \"App.test.tsx\"",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "jest": {
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}",
-      "!src/**/*.d.ts"
-    ],
-    "setupFiles": [
-      "react-app-polyfill/jsdom"
-    ],
-    "setupFilesAfterEnv": [
-      "<rootDir>/src/setupTests.js"
-    ],
-    "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
-      "<rootDir>/src/**/*.{spec,test}.{js,jsx,ts,tsx}"
-    ],
-    "testEnvironment": "jsdom",
-    "transform": {
-      "^.+\\.(js|jsx|mjs|cjs|ts|tsx)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|cjs|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs|cjs|ts|tsx)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "modulePaths": [],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "web.ts",
-      "ts",
-      "web.tsx",
-      "tsx",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ],
-    "watchPlugins": [
-      "jest-watch-typeahead/filename",
-      "jest-watch-typeahead/testname"
-    ],
-    "resetMocks": true
   },
   "babel": {
     "presets": [
