--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,7 +1,10 @@
 {
     "extends": "stylelint-config-standard-scss",
+    "ignoreFiles": [
+        "test-coverage/**/*.css"
+    ],
     "rules": {
-        "indentation": 4,
+        "indentation": 2,
         "at-rule-no-unknown": null,
         "no-descending-specificity": null,
         "selector-pseudo-class-no-unknown": true
