design-the-general-layout , fixing image and font imports, various tweaks

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://cosminmihai87.github.io/mini-chef-app",
   "main": "./build/main.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development npm-run-all lint-check webpack-development",
+    "start": "cross-env NODE_ENV=development npm-run-all lint-fix webpack-development",
     "build": "cross-env NODE_ENV=production npm-run-all lint-check webpack-production",
     "webpack-development": "webpack-dev-server",
     "webpack-production": "webpack --config webpack.config.js",
@@ -15,7 +15,7 @@
     "eslint-check": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
     "eslint-fix": "eslint --fix \"src/**/*.{js,jsx,ts,tsx}\"",
     "stylelint-check": "stylelint \"src/**/*.{css,scss}\"",
-    "stylelint-fix": "stylelint --fix \"src/**/*..{css,scss}\"",
+    "stylelint-fix": "stylelint --fix \"src/**/*.{css,scss}\"",
     "test": "jest --verbose --updateSnapshot --coverage=false",
     "test-coverage": "jest --coverage",
     "test-single-file": "npx jest -u -- \"App.test.tsx\"",
@@ -78,6 +78,7 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.64.4",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.6.0",
