--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -7,6 +7,10 @@
         "indentation": 2,
         "at-rule-no-unknown": null,
         "no-descending-specificity": null,
-        "selector-pseudo-class-no-unknown": true
+        "selector-pseudo-class-no-unknown": true,
+        "no-invalid-position-at-import-rule" : null,
+        "scss/at-import-no-partial-leading-underscore": null,
+        "scss/at-import-partial-extension": null,
+        "scss/no-global-function-names": null
     }
 }
