--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.3.1",
     "react-dev-utils": "^12.0.1",
     "react-dom": "^18.1.0",
     "react-refresh": "^0.11.0",
+    "react-tooltip": "^4.2.21",
     "resolve": "^1.20.0"
   },
   "devDependencies": {
