--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "react-dom": "^18.1.0",
     "react-refresh": "^0.11.0",
     "react-tooltip": "^4.2.21",
-    "resolve": "^1.20.0"
+    "resolve": "^1.20.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
@@ -44,6 +45,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.24",
+    "@types/styled-components": "^5.1.25",
     "@typescript-eslint/eslint-plugin": "^5.21.0",
     "@typescript-eslint/parser": "^5.21.0",
     "babel-loader": "^8.2.5",
