--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "gh-pages": "^3.2.3",
     "react": "^18.1.0",
