--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-refresh": "^0.11.0",
     "react-router-dom": "^6.3.0",
     "react-tooltip": "^4.2.21",
+    "react-transition-group": "^4.4.2",
     "resolve": "^1.20.0",
     "styled-components": "^5.3.5"
   },
