--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
+    "formik": "^2.2.9",
     "gh-pages": "^3.2.3",
     "react": "^18.1.0",
     "react-bootstrap": "^2.3.1",
