--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-transition-group": "^4.4.2",
     "resolve": "^1.20.0",
     "styled-components": "^5.3.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "yup-password": "^0.2.2"
   },
   "devDependencies": {
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
